# stevenarella

./: .build.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  build.rs  renovate.json  shell.html
.cargo/: config
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yaml
blocks/: Cargo.toml
blocks/.cargo/: config
blocks/src/: lib.rs  material.rs
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
openssl/: Cargo.toml
openssl/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: axis.rs  direction.rs  forge.rs  format.rs  item.rs  lib.rs  macros.rs  mojang.rs  position.rs  versions.rs
protocol/src/nbt/: mod.rs
protocol/src/protocol/: forge.rs  mod.rs  mojang.rs  packet.rs  versions.rs
protocol/src/protocol/versions/: v15w39c.rs  v18w50a.rs  v19w02a.rs  v1_10_2.rs  v1_11_2.rs  v1_12_2.rs  v1_13_2.rs  v1_14.rs  v1_14_1.rs  v1_14_2.rs  v1_14_3.rs  v1_14_4.rs  v1_15.rs  v1_15_1.rs  v1_16_1.rs  v1_16_2.rs  v1_16_4.rs  v1_17_1.rs  v1_18_1.rs  v1_18_2.rs  v1_19.rs  v1_7_10.rs  v1_8_9.rs  v1_9.rs  v1_9_2.rs
protocol/src/types/: blockpos.rs  hash.rs  metadata.rs  mod.rs  nibble.rs
protocol/src/types/bit/: map.rs  mod.rs  set.rs
protocol/src/versions/: v15w39c.rs  v19w02a.rs  v1_10_2.rs  v1_11_2.rs  v1_9.rs
resources/: Cargo.toml  build.rs
resources/assets/minecraft/texts/: splashes.txt
resources/assets/steven/blockstates/: missing_block.json
resources/assets/steven/logo/: logo.txt  textures.txt
resources/assets/steven/models/block/: missing_block.json
resources/src/: lib.rs
shared/: Cargo.toml
shared/src/: axis.rs  direction.rs  lib.rs  position.rs
src/: auth.rs  chunk_builder.rs  esc.rs  format.rs  item.rs  lib.rs  macros.rs  main.rs  resources.rs  server.rs  settings.rs
src/bit/: map.rs  mod.rs  set.rs
src/console/: mod.rs
src/ecs/: mod.rs
src/entity/: mod.rs  player.rs  systems.rs
src/entity/block_entity/: mod.rs  sign.rs
src/gl/: mod.rs
src/model/: liquid.rs  mod.rs
src/nbt/: mod.rs
src/protocol/: forge.rs  format.rs  item.rs  mod.rs  mojang.rs  packet.rs  versions.rs
src/protocol/nbt/: mod.rs
src/protocol/types/: hash.rs
src/protocol/versions/: v15w39c.rs  v18w50a.rs  v19w02a.rs  v1_10_2.rs  v1_11_2.rs  v1_12_2.rs  v1_13_2.rs  v1_14.rs  v1_14_1.rs  v1_14_2.rs  v1_14_3.rs  v1_14_4.rs  v1_15_1.rs  v1_7_10.rs  v1_8_9.rs  v1_9_2.rs
src/render/: atlas.rs  clouds.rs  glsl.rs  mod.rs  model.rs  shaders.rs  ui.rs
src/render/shaders/: chunk_frag.glsl  chunk_vertex.glsl  clouds_frag.glsl  clouds_geo.glsl  clouds_vertex.glsl  get_light.glsl  lookup_texture.glsl  model_frag.glsl  model_vertex.glsl  sun_frag.glsl  sun_vertex.glsl  trans_frag.glsl  trans_vertex.glsl  ui_frag.glsl  ui_vertex.glsl
src/screen/: connecting.rs  delete_server.rs  edit_server.rs  login.rs  mod.rs  server_list.rs  settings_menu.rs
src/server/: mod.rs  plugin_messages.rs  sun.rs  target.rs
src/types/: blockpos.rs  metadata.rs  mod.rs
src/types/bit/: map.rs  mod.rs  set.rs
src/ui/: batch.rs  button.rs  formatted.rs  image.rs  logo.rs  mod.rs  text.rs  textbox.rs
src/world/: biome.rs  block.rs  mod.rs  storage.rs
src/world/block/: material.rs  mod.rs  simple.rs  stone.rs
std/: Cargo.toml
std/src/: lib.rs
std_or_web/: Cargo.toml
std_or_web/src/: lib.rs
www/: README.md  index.html  index.js  package-lock.json  package.json
