[package]
name = "stevenarella"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>" ]
edition = "2018"
description = "Multi-protocol multi-platform Minecraft-compatible client"
repository = "https://github.com/iceiix/stevenarella"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[profile.dev]
# Steven runs horrendously slow with no optimizations, and often freezes.
# However, building with full -O3 optimizations takes too long for a debug build.
# Use an -O1 optimization level strikes a good compromise between build and program performance.
opt-level = 1

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.68"
glutin = "0.22.0"
byteorder = "1.3.4"
serde = "1.0.117"
serde_json = "1.0.60"
flate2 = { version = "1.0.19", features = ["rust_backend"], default-features = false }
zip = { version = "0.5.6", features = ["deflate"], default-features = false }
image = "0.23.12"
rand = "0.7.3"
rand_pcg = "0.2.1"
base64 = "0.13.0"
log = { version = "0.4.11", features = ["std"] }
cgmath = "0.17.0"
lazy_static = "1.4.0"
collision = "0.20.1"
rsa_public_encrypt_pkcs1 = "0.2.0"
structopt = "0.3.20"
clipboard = "0.5.0"
# clippy = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.10.9", features = [ "blocking" ]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
winit = { version = "0.20.0", features = [ "stdweb" ]}

[dependencies.steven_gl]
path = "./gl"
version = "0"

[dependencies.steven_resources]
path = "./resources"
version = "0"

[dependencies.steven_blocks]
path = "./blocks"
version = "0"

[dependencies.steven_shared]
path = "./shared"
version = "0"

[dependencies.steven_protocol]
path = "./protocol"
version = "0"

[dependencies.std_or_web]
path = "./std_or_web"
version = "0"
