[package]
name = "stevenarella"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>" ]
edition = "2018"
resolver = "2"
description = "Multi-protocol multi-platform Minecraft-compatible client"
repository = "https://github.com/iceiix/stevenarella"
license = "MIT/Apache-2.0"

[package.metadata.bundle]
name = "Stevenarella"
identifier = "io.github.iceiix.stevenarella"
icon = ["resources/icon*.png"]
category = "Game"
osx_minimum_system_version = "10.14"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked"
# Steven runs horrendously slow with no optimizations, and often freezes.
# However, building with full -O3 optimizations takes too long for a debug build.
# Use an -O1 optimization level strikes a good compromise between build and program performance.
opt-level = 1

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.76"
winit = { version = "0.25.0", features = [ "web-sys" ]}
glow = "0.11.0"
byteorder = "1.4.3"
serde = "1.0.129"
serde_json = "1.0.67"
flate2 = { version = "1.0.20", features = ["rust_backend"], default-features = false }
zip = { version = "0.5.13", features = ["deflate"], default-features = false }
image = "0.23.14"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
rand_pcg = "0.3.1"
base64 = "0.13.0"
log = { version = "0.4.14", features = ["std"] }
cgmath = "0.17.0"
lazy_static = "1.4.0"
collision = "0.20.1"
rsa_public_encrypt_pkcs1 = "0.4.0"
structopt = "0.3.22"
clipboard = "0.5.0"
instant = "0.1.10"
dirs = "3.0.2"
# clippy = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.4", features = [ "blocking" ]}
glutin = "0.27.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
web-sys = "0.3.52"

[dependencies.steven_resources]
path = "./resources"
version = "0"

[dependencies.steven_blocks]
path = "./blocks"
version = "0"

[dependencies.steven_shared]
path = "./shared"
version = "0"

[dependencies.steven_protocol]
path = "./protocol"
version = "0"

[dependencies.std_or_web]
path = "./std_or_web"
version = "0"
