[package]
name = "steven_blocks"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>" ]

[dependencies]
lazy_static = "1.1.0"
cgmath = "0.7.0"
collision = {git = "https://github.com/TheUnnamedDude/collision-rs", rev = "f80825e"}


[dependencies.steven_shared]
path = "../shared"
version = "0"
