[package]
name = "steven_blocks"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>" ]
edition = "2018"

[dependencies]
lazy_static = "1.1.0"
cgmath = "0.16.1"
collision = { git = "https://github.com/rustgd/collision-rs", rev = "e6cf49483fbf5c6cadc79e652469b2def2b98be4" }


[dependencies.steven_shared]
path = "../shared"
version = "0"
