[package]
name = "steven_blocks"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>" ]
edition = "2018"

[profile.release]
# steven_blocks define_blocks! macro takes ~4 hours to fully optimize
# Reduce optimization level to basic optimizations
opt-level = 1

[dependencies]
lazy_static = "1.4.0"
cgmath = "0.17.0"
collision = "0.20.1"


[dependencies.steven_shared]
path = "../shared"
version = "0"
