[package]
name = "steven_protocol"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>" ]
edition = "2018"

[dependencies]
serde = "1.0.119"
serde_json = "1.0.60"
hex = "0.4.2"
sha-1 = "0.9.1"
aes = "0.4.0"
cfb8 = "0.4.0"
byteorder = "1.4.2"
log = { version = "0.4.13", features = ["std"] }
flate2 = { version = "1.0.19", features = ["rust_backend"], default-features = false }
num-traits = "0.2.12"
instant = "0.1.9"
uuid = { version = "0.8.2", features = ["v3", "wasm-bindgen"] }

[dependencies.steven_shared]
path = "../shared"
version = "0"

[dependencies.std_or_web]
path = "../std_or_web"
version = "0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.0", features = [ "blocking" ]}
