[package]
name = "steven_protocol"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>" ]
edition = "2021"

[dependencies]
serde = "1.0.140"
serde_json = "1.0.82"
hex = "0.4.3"
sha-1 = "0.9.7"
aes = "0.7.4"
cfb8 = "0.7.1"
byteorder = "1.4.3"
log = { version = "0.4.14", features = ["std"] }
flate2 = { version = "1.0.22", features = ["rust_backend"], default-features = false }
num-traits = "0.2.14"
instant = "0.1.12"

[dependencies.steven_shared]
path = "../shared"
version = "0"

[dependencies.std_or_web]
path = "../std_or_web"
version = "0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.11", features = [ "blocking" ]}
