[package]
name = "std_or_web"
version = "0.0.1"
authors = [ "iceiix <ice_ix@protonmail.ch>" ]
edition = "2018"

[dependencies]
log = { version = "0.4.6", features = ["std"] }
cfg-if = "0.1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/iceiix/stdweb", rev = "5f9ef949ab29e495b648ab9af79845f327ab1ed6" }
hex = "0.3.2"
